[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.1",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
]
